User endpoints updated
